--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,14 +5,35 @@ on:
     tags:
       - "v*"
 
+# Prevent concurrent builds to avoid cache conflicts
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false
+
 jobs:
-  release:
+  build-and-push:
     permissions:
       contents: write
       id-token: write
       attestations: write
 
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        include:
+          - image: swissknife
+            context: .
+            dockerfile: ./Dockerfile
+            target: ""
+          - image: swissknife-server
+            context: .
+            dockerfile: ./Dockerfile
+            target: swissknife-server
+          - image: swissknife-dashboard
+            context: ./dashboard
+            dockerfile: ./dashboard/Dockerfile
+            target: ""
 
     steps:
       - name: Checkout repository
@@ -30,74 +51,36 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Extract metadata (combined image)
-        id: meta-app
+      - name: Extract metadata
+        id: meta
         uses: docker/metadata-action@v5
         with:
-          images: bitcoinnumeraire/swissknife
+          images: bitcoinnumeraire/${{ matrix.image }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha
 
-      - name: Extract metadata (server image)
-        id: meta-server
-        uses: docker/metadata-action@v5
-        with:
-          images: bitcoinnumeraire/swissknife-server
-
-      - name: Extract metadata (dashboard image)
-        id: meta-dashboard
-        uses: docker/metadata-action@v5
-        with:
-          images: bitcoinnumeraire/swissknife-dashboard
-
-      - name: Build and push combined Docker image
-        id: push-app
+      - name: Build and push Docker image
+        id: push
         uses: docker/build-push-action@v6
         with:
-          context: .
+          context: ${{ matrix.context }}
+          file: ${{ matrix.dockerfile }}
+          target: ${{ matrix.target }}
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ steps.meta-app.outputs.tags }}
-          labels: ${{ steps.meta-app.outputs.labels }}
+          cache-from: type=gha,scope=${{ matrix.image }}
+          cache-to: type=gha,mode=max,scope=${{ matrix.image }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            BUILDKIT_INLINE_CACHE=1
 
-      - name: Build and push backend Docker image
-        id: push-server
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          file: ./Dockerfile
-          target: swissknife-server
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ steps.meta-server.outputs.tags }}
-          labels: ${{ steps.meta-server.outputs.labels }}
-
-      - name: Build and push dashboard Docker image
-        id: push-dashboard
-        uses: docker/build-push-action@v6
-        with:
-          context: ./dashboard
-          file: ./dashboard/Dockerfile
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ steps.meta-dashboard.outputs.tags }}
-          labels: ${{ steps.meta-dashboard.outputs.labels }}
-
-      - name: Generate artifact attestation (combined)
+      - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
-          subject-name: docker.io/bitcoinnumeraire/swissknife
-          subject-digest: ${{ steps.push-app.outputs.digest }}
-          push-to-registry: true
-
-      - name: Generate artifact attestation (server)
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-name: docker.io/bitcoinnumeraire/swissknife-server
-          subject-digest: ${{ steps.push-server.outputs.digest }}
-          push-to-registry: true
-
-      - name: Generate artifact attestation (dashboard)
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-name: docker.io/bitcoinnumeraire/swissknife-dashboard
-          subject-digest: ${{ steps.push-dashboard.outputs.digest }}
+          subject-name: docker.io/bitcoinnumeraire/${{ matrix.image }}
+          subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
