--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,3 +70,10 @@ bytes = "1.7.2"
 [build-dependencies]
 tonic-build = "0.12.3"
 chrono = "0.4.38"
+
+[profile.release]
+opt-level = "z"     # Optimize for size
+lto = true          # Enable Link Time Optimization
+codegen-units = 1   # Better optimization, slower compile
+strip = true        # Strip symbols from binary
+panic = "abort"     # Reduce binary size by not including unwinding code
