--- a/Cargo.toml
+++ b/Cargo.toml
@@ -70,3 +70,8 @@ bytes = "1.7.2"
 [build-dependencies]
 tonic-build = "0.12.3"
 chrono = "0.4.38"
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip = true
