--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ base64 = "0.22.1"
 tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
 http = "1.1.0"
 bytes = "1.7.2"
+bitcoin = "0.32.4"
 
 [build-dependencies]
 tonic-build = "0.12.3"
