--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ axum-extra = { version = "0.9.4", features = ["typed-header", "query"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 serde_bolt = "0.3.5"
-serde_with = "3.11.0"
+serde_with = { version = "3.11.0", features = ["base64"] }
 tokio = { version = "1.40", features = ["full"] }
 breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.6.2" }
 bip39 = { version = "*", features = ["rand_core"] }
