--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ axum-extra = { version = "0.9.4", features = ["typed-header", "query"] }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 serde_bolt = "0.3.5"
-serde_with = { version = "3.11.0", features = ["base64"] }
+serde_with = "3.11.0"
 tokio = { version = "1.40", features = ["full"] }
 breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.6.2" }
 bip39 = { version = "*", features = ["rand_core"] }
@@ -66,7 +66,8 @@ base64 = "0.22.1"
 tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
 http = "1.1.0"
 bytes = "1.7.2"
-bitcoin = "0.32.4"
+bitcoin = "=0.32.2"
+psbt-v2 = { version = "0.2.0", features = ["base64"] }
 
 [build-dependencies]
 tonic-build = "0.12.3"
