--- a/config/default.toml
+++ b/config/default.toml
@@ -47,7 +47,7 @@ ws_min_reconnect_delay = "1s"
 ws_max_reconnect_delay = "30s"
 
 # LND Lightning provider
-[lnd_config]
+[lnd_rest_config]
 host = "localhost:8080"
 macaroon_path = "certs/lnd/admin.macaroon"
 # ca_cert_path = "certs/lnd/tls.cert"" # Optional for HTTP
@@ -60,6 +60,15 @@ payment_timeout = "60s"
 fee_limit_msat = 25000
 ws_min_reconnect_delay = "1s"
 ws_max_reconnect_delay = "30s"
+reorg_buffer_blocks = 2
+
+[lnd_grpc_config]
+endpoint = "https://localhost:10009"
+cert_path = "certs/lnd/tls.cert"
+macaroon_path = "certs/lnd/admin.macaroon"
+payment_timeout = "60s"
+fee_limit_msat = 25000
+retry_delay = "2s"
 reorg_buffer_blocks = 2
 
 # Logging
