--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,33 +11,33 @@ homepage = "https://numeraire.tech"
 build = "build.rs"
 
 [dependencies]
-async-trait = "0.1.83"
-axum = { version = "0.7.7", features = ["macros"] }
-axum-extra = { version = "0.9.4", features = ["typed-header", "query"] }
-serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
+async-trait = "0.1.89"
+axum = { version = "0.8.8", features = ["macros"] }
+axum-extra = { version = "0.12.5", features = ["typed-header", "query"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
 serde_bolt = "0.3.5"
-serde_with = "3.11.0"
-tokio = { version = "1.40", features = ["full"] }
-breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.6.2" }
+serde_with = "3.16.1"
+tokio = { version = "1.49", features = ["full"] }
+breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.8.0" }
 bip39 = { version = "*", features = ["rand_core"] }
-config = { version = "0.14.0", features = ["yaml", "json", "toml"] }
+config = { version = "0.15.19", features = ["yaml", "json", "toml"] }
 dotenv = "0.15.0"
-tracing = "0.1.40"
-tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
-jsonwebtoken = "9.3.0"
-reqwest = { version = "0.12.8", features = ["json"] }
-uuid = { version = "1.10.0", features = ["v4", "serde"] }
-chrono = "0.4.38"
-thiserror = "1.0.64"
-tower-http = { version = "0.6.1", features = [
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
+jsonwebtoken = "10.3.0"
+reqwest = { version = "0.13.2", features = ["json"] }
+uuid = { version = "1.20.0", features = ["v4", "serde"] }
+chrono = "0.4.43"
+thiserror = "2.0.18"
+tower-http = { version = "0.6.8", features = [
     "fs",
     "timeout",
     "trace",
     "cors",
 ] }
 regex = "1"
-sea-orm = { version = "1.0", features = [
+sea-orm = { version = "~1.0", features = [
     "sqlx-postgres",
     "sqlx-sqlite",
     "runtime-tokio-rustls",
@@ -45,33 +45,34 @@ sea-orm = { version = "1.0", features = [
     "with-chrono",
     "with-uuid",
 ] }
-strum = "0.26"
-strum_macros = "0.26"
-tonic = { version = "0.12.3", features = ["tls"] }
-prost = "0.13.3"
-lightning-invoice = "0.32.0"
+strum = "0.27"
+strum_macros = "0.27"
+tonic = { version = "0.14.3", features = ["tls-ring"] }
+tonic-prost = "0.14.3"
+prost = "0.14.3"
+lightning-invoice = "0.34.0"
 hex = "0.4.3"
-anyhow = "1.0.89"
+anyhow = "1.0.101"
 futures-util = "0.3.31"
-humantime = "2.1.0"
+humantime = "2.3.0"
 rust_socketio = { version = "0.6.0", features = ["async"] }
-bcrypt = "0.15.1"
+bcrypt = "0.18.0"
 migration = { path = "migration" }
-utoipa = { version = "5.1.1", features = ["axum_extras", "chrono", "uuid"] }
-utoipa-scalar = { version = "0.2.0", features = ["axum"] }
-native-tls = "0.2.12"
-nostr-sdk = "0.35.0"
-rand = "0.8.5"
+utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
+utoipa-scalar = { version = "0.3.0", features = ["axum"] }
+native-tls = "0.2.14"
+nostr-sdk = "0.44.1"
+rand = "0.10.0"
 base64 = "0.22.1"
-tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
-http = "1.1.0"
-bytes = "1.7.2"
+tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
+http = "1.4.0"
+bytes = "1.11.1"
 bitcoin = "=0.32.2"
 psbt-v2 = { version = "0.2.0", features = ["base64"] }
 
 [build-dependencies]
-tonic-build = "0.12.3"
-chrono = "0.4.38"
+tonic-prost-build = "0.14.3"
+chrono = "0.4.43"
 
 [profile.release]
 lto = true
