--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,15 +18,15 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 serde_bolt = "0.3.5"
 serde_with = "3.16.1"
-tokio = { version = "1.49", features = ["full"] }
-breez-sdk-core = { git = "https://github.com/breez/breez-sdk", tag = "0.8.0" }
+tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time", "fs", "io-util"] }
+breez-sdk-liquid = { git = "https://github.com/breez/breez-sdk-liquid", tag = "0.11.13" }
 bip39 = { version = "*", features = ["rand_core"] }
 config = { version = "0.15.19", features = ["yaml", "json", "toml"] }
 dotenv = "0.15.0"
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
 jsonwebtoken = "10.3.0"
-reqwest = { version = "0.13.2", features = ["json"] }
+reqwest = { version = "=0.12.18", features = ["json"] }
 uuid = { version = "1.20.0", features = ["v4", "serde"] }
 chrono = "0.4.43"
 thiserror = "2.0.18"
@@ -37,12 +37,13 @@ tower-http = { version = "0.6.8", features = [
     "cors",
 ] }
 regex = "1"
-sea-orm = { version = "~1.0", features = [
+sea-orm = { version = "1.1.19", features = [
     "sqlx-postgres",
     "sqlx-sqlite",
     "runtime-tokio-rustls",
     "macros",
     "with-chrono",
+    "with-json",
     "with-uuid",
 ] }
 strum = "0.27"
@@ -67,8 +68,18 @@ base64 = "0.22.1"
 tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
 http = "1.4.0"
 bytes = "1.11.1"
-bitcoin = "=0.32.2"
-psbt-v2 = { version = "0.2.0", features = ["base64"] }
+bitcoin = "=0.32.8"
+
+[patch.crates-io]
+sqlx = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx" }
+sqlx-core = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-core" }
+sqlx-macros = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-macros" }
+sqlx-macros-core = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-macros-core" }
+sqlx-mysql = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-mysql" }
+sqlx-postgres = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-postgres" }
+sqlx-sqlite = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-sqlite" }
+libsqlite3-sys = { git = "https://github.com/breez/rusqlite", branch = "rusqlite-v0.38.0", package = "libsqlite3-sys" }
+secp256k1-zkp = { git = "https://github.com/breez/rust-secp256k1-zkp.git", rev = "eac2e479255a6e32b5588bc25ee53c642fdd8395" }
 
 [build-dependencies]
 tonic-prost-build = "0.14.3"
