--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ config = { version = "0.15.19", features = ["yaml", "json", "toml"] }
 dotenv = "0.15.0"
 tracing = "0.1.44"
 tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
-jsonwebtoken = "10.3.0"
+jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] } 
 reqwest = { version = "=0.12.18", features = ["json"] }
 uuid = { version = "1.20.0", features = ["v4", "serde"] }
 chrono = "0.4.43"
