--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ serde_json = "1.0.149"
 serde_bolt = "0.3.5"
 serde_with = "3.16.1"
 tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal", "net", "sync", "time", "fs", "io-util"] }
-breez-sdk-spark = { git = "https://github.com/breez/spark-sdk", tag = "0.9.0" }
+breez-sdk-spark = { git = "https://github.com/darioAnongba/spark-sdk", rev="61b7fff0b55188af02ea5d8be80edda8fbf23eeb"}
 bip39 = { version = "*", features = ["rand_core"] }
 config = { version = "0.15.19", features = ["yaml", "json", "toml"] }
 dotenv = "0.15.0"
@@ -69,15 +69,8 @@ tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
 http = "1.4.0"
 bytes = "1.11.1"
 bitcoin = "=0.32.8"
-
-[patch.crates-io]
-sqlx = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx" }
-sqlx-core = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-core" }
-sqlx-macros = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-macros" }
-sqlx-macros-core = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-macros-core" }
-sqlx-mysql = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-mysql" }
-sqlx-postgres = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-postgres" }
-sqlx-sqlite = { git = "https://github.com/darioAnongba/sqlx", rev = "aef65d604b28967fa9549f2ccd80de254b066d34", package = "sqlx-sqlite" }
+aes = "0.8"
+cbc = "0.1"
 
 [build-dependencies]
 tonic-prost-build = "0.14.5"
